# tcc-project

./: .gitignore  README.md  minify.sh  pyproject.toml
docs/mmd/: class_diagram.mmd  code_flow.mmd  communication_flow.mmd  entity_relationship.mmd
rp2040-firmware/: main.py
rp2040-firmware/configuration/: environment.py
rp2040-firmware/utils/: dht_sensor.py  input_button.py  lcd_display.py  mqtt_client.py  wifi_manager.py
rpi5-iac/: compose.yml
rpi5-iac/grafana/: Dockerfile  grafana.db
rpi5-iac/nodered/: Dockerfile  flows.json  flows_cred.json  settings.js
