[tool.poetry]
name = "tcc-project"
version = "0.1.0"
description = ""
authors = ["Carlos Szarin <carlos.szarin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
python-minifier = "^3.0.0"
black = "^25.9.0"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = 'black -l 120 . && isort .'
